<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ValidityAdjustmentListItemDataBinding">

        <variable
            name="vm"
            type="com.jd.saas.pdacommon.search.SearchGoodBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_bg_card_global"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/adjustment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/validity_adjustment_list_stock_number"
                android:textColor="@color/validity_text_color_black"
                android:textSize="@dimen/text_bigger"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.qty}"
                android:textColor="@color/validity_text_color_black"
                android:textSize="@dimen/text_bigger"
                android:singleLine="true"
                android:maxLines="1"
                app:layout_constraintLeft_toRightOf="@id/adjustment"
                app:layout_constraintTop_toTopOf="@id/adjustment" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="77dp"
                android:layout_height="52dp"
                android:layout_marginStart="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_right_dark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="7dp"
            android:background="@color/toolbar_divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/produce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validity_adjustment_list_produce_data"
                        android:textColor="@color/validity_text_color_grey"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.produceDate}"
                        android:textColor="@color/validity_text_color_black"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/warning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validity_adjustment_list_waring_data"
                        android:textColor="@color/validity_text_color_grey"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.warnDate}"
                        android:textColor="@color/validity_text_color_black"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validity_adjustment_list_tip_data"
                        android:textColor="@color/validity_text_color_grey"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.hintDate}"
                        android:textColor="@color/validity_text_color_black"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/invalidation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validity_adjustment_list_invalidation_data"
                        android:textColor="@color/validity_text_color_grey"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.expireDate}"
                        android:textColor="@color/validity_text_color_black"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>